--- a/catalog/view/theme/default/css/index.css
+++ b/catalog/view/theme/default/css/index.css
@@ -24,10 +24,10 @@
 	/*index图片弹窗*/
 	.img_modal{position: fixed;width: 100%;height: 100%;left: 0;top: 0;background: transparent;display: none;}
 	.img_modal .text{position: absolute;width: 42vw;height:31.25vw;left: 50%; margin-left: -21vw;top: 50%;margin-top: -15.625vw;
-	background:#fff6f3 url(../img/png/modal_bg.png) no-repeat right bottom;background-size: 13.125vw 28.125vw;}
+	background:url(../img/jpg/modal_bg.jpg) no-repeat right bottom;background-size: 100%;}
 	.img_modal .text .close{width: 52px;height: 52px; position: absolute;right: 0px;top: 0px;cursor: pointer;
 	background: url(../img/png/close2.png) no-repeat center center;background-size: 18px 18px;}
-	.img_modal .text h1{font-size: 1.56vw;color: #333;font-weight: bold;margin: 3.65vw 2.08vw 2.9vw 2.08vw;}
+	.img_modal .text h1{font-size: 1.45vw;color: #333;font-weight: bold;margin: 3.65vw 2.08vw 2.9vw 2.08vw;}
 	.img_modal .text .bot{width: 26.5vw;margin-left: 2.08vw;}
 	.img_modal .text .bot ul li{width: 30%;float: left;display: inline-block;margin-right: 3.33%;margin-bottom: 1.56vw;}
 	.img_modal .text .bot ul li a{border: 1px solid #ddd;background: #fff;display: block;border-radius: 50px;color: #444;font-size: 1.25vw;text-align: center;
@@ -82,7 +82,7 @@
 	/************product*************/
 	.pro_content{background: #f5f5f5;padding:  0 1.19vw;margin-bottom: 8.33vw;}
 	.pro_content .top {background: #fff;padding:  0 1.66vw;margin: 0.83vw 0 1.25vw 0;position: relative;min-height: 50px;}
-	.pro_content .top h1{font-family: bau; font-size: 1.25vw;display: inline-block;float: left;position:absolute;top: 50%;
+	.pro_content .top h1{/*font-family: bau;*/ font-size: 1.25vw;display: inline-block;float: left;position:absolute;top: 50%;
 	margin-top: -21px;height: 40px;line-height: 42px; }
 	.pro_content .top .s_page{position: absolute;top: 50%;margin-top: -16px;right: 130px;height: 32px;line-height: 32px; }
 	.pro_content .top .s_page ul li{display: inline-block;margin-right: 5px;}
@@ -217,7 +217,7 @@
 	.pro_det_content .right .xyd_btn span{display: block;float: left;height: 2.08vw;line-height: 2.1vw;padding-left: 1.25vw;}
 	.pro_det_content .bot_text dt{font-size: 0.93vw;color: #000;line-height: 0.93vw;margin-bottom: 0.43vw;}
 	.pro_det_content .bot_text dd{font-size: 0.83vw !important;color: #666;line-height: 1.36vw;padding-left: 0.83vw;
-	background: url(../img/png/yuan.png)no-repeat left center;background-size: 0.41vw 0.41vw;}
+	background: url(../img/png/yuan.png)no-repeat left top 0.42vw;background-size: 0.41vw 0.41vw;}
 	.pro_det_content .share span{font-size: 0.93vw;color: #333;display: block; margin-top: 1.04vw;}
 	.pro_det_content .share_ul li{width: 1.66vw;height: 1.66vw;display: block;float: left;margin: 0.83vw 0.83vw 0 0;}
 	.pro_det_content .share_ul li a{display: block;height: 1.66vw;width: 100% !important;padding: 0 !important;}
@@ -1215,7 +1215,7 @@
 	/*index图片弹窗*/
 	.img_modal{position: fixed;width: 100%;height: 100%;left: 0;top: 0;background: transparent;display: none;}
 	.img_modal .text{position: absolute;width: 5rem;height:3.75rem;left: 50%; margin-left: -2.5rem;top: 50%;margin-top: -1.875rem;
-	background:#fff6f3 url(../img/png/modal_bg.png) no-repeat right bottom;background-size: 1.5rem 3.2rem;}
+	background:url(../img/jpg/modal_bg.jpg) no-repeat right bottom;background-size: 100%;}
 	.img_modal .text .close{width: 0.8rem;height: 0.8rem; position: absolute;right: 0px;top: 0px;cursor: pointer;
 	background: url(../img/png/close2.png) no-repeat center center;background-size: 0.3rem 0.3rem;}
 	.img_modal .text h1{font-size: 0.2rem;color: #333;font-weight: bold;margin: 0.3rem 0.2rem 0.2rem 0.2rem;}
@@ -1320,7 +1320,7 @@
 	.pro_det_content .top .left{width: 100%;}
 	.pro_det_content .top .left .pro_img_ol{display: none;}
 	.pro_det_content .top .left .pro_lb_off{display: none;}
-	.swiper-button-next, .swiper-button-prev{display: none;}
+	.pro_big_img .swiper-button-next,.pro_big_img .swiper-button-prev{display: none;}
 	.pro_det_content .top .top_text{padding: 0 0.4rem;}
 	.pro_det_content .top .right a{font-family: san_b; font-size: 0.3rem;color: #333;line-height: 0.8rem;display: block;text-align: center;}
 	.pro_det_content .top p.price{font-family: san_b;color: #333;font-size:0.3rem;margin-bottom: 0.3rem;line-height: 0.6rem;display: block;text-align: center;}
@@ -1682,9 +1682,9 @@
 	
 	/******全部分类******/
 	.all_ul{background: #f5f5f5;padding: 0.2rem 0.2rem 0 0.2rem;}
-	.all_ul li{margin-bottom: 0.3rem;width: 100%;position: relative;border-radius: 10px;}
+	.all_ul li{margin-bottom: 0.3rem;width: 100%;position: relative;}
 	.all_ul li .pic_img img{display: block;}
-	.all_ul li .pic_img .zzc_div{display: block;position: absolute;top: 0;left: 0;background: rgba(0,0,0,.4);z-index: 1;}
+	.all_ul li .pic_img .zzc_div{display: block;position: absolute;top: 0;left: 0;z-index: 1;}
 	.all_ul li .text{position: absolute;bottom: 0.7rem;width: 100%;z-index: 2;}
 	.all_ul li .text img{display: block;margin: 0  auto 0.2rem auto;}
 	.all_ul li .text p{font-size: 0.3rem;text-align: center;color: #fff;font-family: san_r;line-height: 0.3rem;}
@@ -2392,6 +2392,24 @@
 	.ol_img6 li img{transition: all .5s;position: relative;bottom: 0;}
 	.ol_img6 li:hover img{bottom: 10px; }
 	
+	
+}
+
+
+@media only screen and (min-width: 1081px) and (max-width: 1920px) {
+	.product_lb{margin: 20px 0 80px 0;position: relative;}
+	.product_lb img{display: block;margin: auto;}
+	.product_lb .swiper-button-next,.product_lb .swiper-button-prev{position: absolute;top: 50% !important;margin-top: -22px;
+	width: 44px !important;height: 44px !important;display: block;border-radius: 50%;}
+	.product_lb .swiper-button-prev, .product_lb .swiper-container-rtl .swiper-button-next{
+		background:rgba(255,255,255,.5) url(../img/png/lb_left.png) no-repeat center center;left: 5px;
+		
+	}
+	.product_lb .swiper-button-next, .product_lb .swiper-container-rtl .swiper-button-prev{
+		background:rgba(255,255,255,.5) url(../img/png/lb_right.png) no-repeat center center;right: 5px;
+		
+	}
+	.product_lb .swiper-slide{padding: 0 5px;}
 }
 
 
@@ -2400,8 +2418,7 @@
 .yd_img{opacity: 0;display: none;}
 .pc_img{opacity: 1;display: inline-block;}
 .ul_in1>li .text{display: none;}
-.product_lb{display: none;}
-.ol_img6{display: block;}
+.ol_img6{display: none;}
 .footer{display: block;}
 .yd_footer,.yd_footer2{display: none;}
 
@@ -2434,7 +2451,6 @@
 	.yd_img{opacity: 1;display: inline-block;}
 	.pc_img{opacity: 0;display: none !important;}
 	.ul_in1>li .text{display: block;}
-	.product_lb{display: block;}
 	.ol_img6{display: none;}
 	
 	.banner{height: 4.8rem;margin: 0 0.2rem 0.8rem 0.2rem;}
@@ -2451,7 +2467,7 @@
 	.ul_in1{padding: 0.4rem 0rem 0.8rem 0rem;margin: 0 -5px;}
 	.ul_in1>li{padding: 0 5px;width: 33.3%;float: left;}
 	.ul_in1>li .pic img{display: block;}
-	.ul_in1>li .text{display: block; text-align: center;padding: 0.14rem 0;border: 1px solid #d5af74;border-top: 0;}
+	.ul_in1>li .text{display: none; text-align: center;padding: 0.14rem 0;border: 1px solid #d5af74;border-top: 0;}
 	.ul_in1>li .text h2{font-family: bau;font-size: 0.24rem;line-height: 0.26rem; color: #000;font-weight: normal;}
 	.ul_in1>li .text p{font-size: 0.16rem;color: #666;font-family: tahoma;line-height: 0.18rem;margin-top: 0.06rem;}
 	
@@ -2465,7 +2481,7 @@
 	 border-color: #fff transparent transparent transparent;position: relative;top: -0.11rem;left: -0.1rem;}
 	
 	
-	.video_div{position: relative;}
+	.video_div{position: relative;margin-bottom: 0.8rem;}
 	.video_div .bg_div{width: 100%;height: 4rem;position: absolute;top: 0;left: 0;
 	 background: rgba(0,0,0,.5) url(../img/png/video_bf.png) no-repeat center center;}
 	.index_text .video{width: 100%;height: 4rem;}
@@ -2480,30 +2496,29 @@
 	.ol_img li .text{padding: 0.1rem 0.1rem 0 0.1rem;}
 	.ol_img li .text span{font-family: san_r; font-size: 0.3rem;color: #000;line-height: 0.32rem;display: block;}
 	.ol_img li .text p{display: none;}
+	.ol_img2 {padding-top: 0;}
 	.ol_img2 li:last-child{display: none;}
 	.ol_img5 li:last-child{display: none;}
 	.index_text2{padding-top: 0.18rem;}
 	.index_text2 .bt2 a.a_btn{margin:0.25rem auto 0.4rem auto;box-sizing: border-box;}
-	
+}
+
+
+@media only screen and (min-width: 1px) and (max-width: 1080px) {
 	.product_lb{padding: 0.3rem 0.08rem 1.1rem 0.08rem;position: relative;}
 	.product_lb img{display: block;margin: auto;}
-	.swiper-button-next, .swiper-button-prev{position: absolute;top: auto !important;bottom: 0.6rem !important;
+	.product_lb .swiper-button-next,.product_lb .swiper-button-prev{position: absolute;top: auto !important;bottom: 0.6rem !important;
 	width: 0.14rem !important;height: 0.26rem !important;display: block;}
-	.product_lb .swiper-button-prev, .jjfa2_lb .swiper-container-rtl .swiper-button-next{
+	.product_lb .swiper-button-prev, .product_lb .swiper-container-rtl .swiper-button-next{
 		background: url(../img/png/lb_left.png) no-repeat left center;left: 50%;margin-left: -0.5rem;
 		background-size: 0.14rem 0.26rem;
 	}
-	.product_lb .swiper-button-next, .jjfa2_lb .swiper-container-rtl .swiper-button-prev{
+	.product_lb .swiper-button-next, .product_lb .swiper-container-rtl .swiper-button-prev{
 		background: url(../img/png/lb_right.png) no-repeat right center;right: 50%;margin-right: -0.5rem;
 		background-size: 0.14rem 0.26rem;
 	}
 	.product_lb .swiper-slide{padding: 0 0.03rem;}
-	
-	
 }
-
-
-
 
 
 
