--- a/catalog/view/theme/default/css/common.css
+++ b/catalog/view/theme/default/css/common.css
@@ -163,9 +163,9 @@ border-bottom:2px solid transparent ;position: relative;}
 .nav .right{float: right;position: relative;z-index: 10;top: -17px;}
 .nav .img_ol li{min-width: 28px;padding-top: 30px; display: inline-block;float: left;font-family: georgia;color: #444;font-size: 14px;
 text-align: center;margin-right: 20px;cursor: pointer;position: relative;}
-.nav .img_ol li a{display: block;width: 28px;height: 28px;position: absolute;top: 0;left: 0;}
-.nav .img_ol li span{font-family: tahoma; font-size: 12px;color: #999;line-height: 18px;display: block;
-position: absolute;top:0;right: -8px;}
+.nav .img_ol li a{display: block;width: 100%;height: 100%;position: absolute;top: 0;left: 0;}
+.nav .img_ol li span{font-family: tahoma; font-size: 12px;color: #ff2054;line-height: 18px;display: block;
+position: absolute;top:-8px;right: -12px;}
 .nav .img_ol li:nth-child(1){background: url(../img/png/searchs.png) no-repeat center top;background-size: 28px ;}
 .nav .img_ol li:nth-child(2){background: url(../img/png/mime.png) no-repeat center top;}
 .nav .img_ol li:nth-child(3){background: url(../img/png/xingxing.png) no-repeat center top;}
@@ -251,7 +251,7 @@ text-align: center; position: absolute;bottom: 10px;}
 .yd_footer .ul_ydfot ol li a{font-family: san_r;font-size: 0.26rem;line-height: 0.26rem; color: #fff;display: block;}
 .yd_footer .ul_ydfot .slide_div p{font-size: 0.26rem;color: #fff;text-align: left;line-height: 0.28rem;margin-top: 0.35rem;margin-bottom: 0.3rem;}
 .yd_footer .ul_ydfot .slide_div input{font-size: 0.18rem;height: 0.6rem;line-height: 0.6rem;width: 4rem;border: 1px solid #fff;border-radius: 0.05rem;
-	padding: 0 0.2rem;box-sizing: border-box;margin-right: 0.2rem;display: block;float: left;background: transparent;}
+	padding: 0 0.2rem;box-sizing: border-box;margin-right: 0.2rem;display: block;float: left;background: transparent;color: #fff;}
 .yd_footer .ul_ydfot .slide_div button{width: 2rem;height: 0.6rem;background: #fff;border-radius: 0.05rem;border: none;
 	font-size: 0.18rem;line-height: 0.6rem;color: #000;}
 .yd_footer .ul_ydfot .slide_div .fot_img{margin-bottom: 0.6rem;clear: both;}
@@ -437,6 +437,7 @@ display: block;width: 100%;padding:0 0.4rem;box-sizing: border-box;}
 	.nav .logo img{display: block ;margin: 0;}
 	.nav .logo a{display: block;width: 2.9rem;margin: auto;}
 	
+	.cart_count{position: absolute;top: 0.1rem;right: 0.35rem;color: #ff2054;}
 }
 
 
